Completed messaging across all views

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1662,8 +1662,12 @@ Media query
   color: #929292;
 }
 
+.looking-for-room table tr td:hover i{
+  color: #f7953d;
+}
+
 .looking-for-room table tr td:hover{
-  background: #f7953d;
+  cursor: pointer;
 }
 
 .white-box .property-pictures {
@@ -1677,27 +1681,9 @@ Contact bubble
 ========================================================================== */
 
 .contact-bubble-email {
-  background: #f7953d;
-  width: 3em;
-  height: 3em;
-  border-radius: 50%;
   display: inline-block;
   text-align: center;
-  padding-top: 15px;
-}
-
-/* ==========================================================================
-Contact bubble Facebook
-========================================================================== */
-
-.contact-bubble-facebook {
-  background: #3B5998;
-  width: 3em;
-  height: 3em;
-  border-radius: 50%;
-  display: inline-block;
-  text-align: center;
-  padding-top: 15px;
+  color: #929292;
 }
 
 /* ==========================================================================
@@ -1954,7 +1940,11 @@ Posts dashboard padding
 }
 
 .available-rooms .room table tr td:hover{
-  background: #f7953d;
+  cursor: pointer;
+}
+
+.available-rooms .room table tr td:hover i{
+  color: #f7953d;
 }
 
 .room .arYouView ul.specs {
@@ -1995,7 +1985,11 @@ Posts dashboard padding
 }
 
 .aroundYouDashboard table tr td:hover{
-  background: #f7953d;
+  cursor: pointer;
+}
+
+.aroundYouDashboard table tr td:hover i{
+  color: #f7953d;
 }
 
 h2.section-title:nth-child(n+2) {
@@ -2034,8 +2028,6 @@ Looking Details
 }
 
 .lookingDetails dl.specs dd{
-  color: #000;
-  font-weight: bold;
   padding-left: 10px;
 }
 
@@ -2626,7 +2618,11 @@ Looking Details
 }
 
 .front table tr td:hover{
-  background: #f7953d;
+  cursor: pointer;
+}
+
+.front table tr td:hover i{
+  color: #f7953d;
 }
 
 .front table tr td i {
@@ -3493,6 +3489,10 @@ a.view-all {
   font-size: 0.8em;
 }
 
+.room-detail .details i {
+  color: #929292;
+}
+
 .room-detail .highlights .distances {
   margin: 20px 0;
 }
@@ -3542,12 +3542,39 @@ a.view-all {
 .room-detail .details dl.specs dt{
   float: left;
   clear: left;
+  font-weight: normal;
 }
 
 .room-detail .details dl.specs dd{
-  font-weight: bold;
   padding-left: 10px;
 }
+
+.room-detail .highlightMessage a:hover {
+  cursor: pointer;
+}
+
+.room-detail .highlightMessage a:hover i {
+  color: #f7953d;
+}
+
+.room-detail .highlightMessage a {
+  margin-left:20px;
+  position: relative;
+}
+
+.highlightMessage a:hover {
+  cursor: pointer;
+}
+
+.highlightMessage a:hover i {
+  color: #f7953d;
+}
+
+.highlightMessage a {
+  margin-left:20px;
+  position: relative;
+}
+
 
 .address-specs{
 
