Front-end changes to the landing page. Added Off-campus Housing channel for launch

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -2229,6 +2229,10 @@ Looking Details
   width: 100%;
 }
 
+.message-reply textarea:invalid {
+  box-shadow:none;
+}
+
 .message-reply .message-button {
   text-align: center;
 }
