PubNub education error fix seen on browsers. Landing page style moving to CSS.

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -234,6 +234,15 @@ Style for How It Works section
 }
 
 /* ==========================================================================
+Style for core features
+========================================================================== */
+.core-features {
+  overflow: hidden;
+  position: relative;
+  min-height: 680px;
+}
+
+/* ==========================================================================
 Style for footer
 ========================================================================== */
 .joinrented {
