--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -13,7 +13,7 @@
             <div class="slider-menu">
               <h2>Menu<a ng-click="toggle()" class="pull-right" ><i class="fa fa-times-circle small"></i></a></h2>
               <ul>
-                <a ui-sref="{{tab.sref}}" ui-sref-opts="{reload:true}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in nav.tabs">
+                <a ui-sref="{{tab.sref}}" ui-sref-opts="{reload:true, notify:true}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in nav.tabs">
                   <li>{{tab.title}}</li>
                 </a>
               </ul>
@@ -31,7 +31,7 @@
     </div>
     <div class="right-content">
       <div id="logged" ng-if="isLoggedIn()" class="loggedIn">
-        <a ui-sref="messages">
+        <a ui-sref="messages" ui-sref-opts="{reload:true, notify:true}">
           <i class="fa fa-comments-o fa-2x"></i>
           <span class="notification-counter" ng-if="nav.notifs.pmNotif > 0">!</span>
         </a>
